--- a/src/content/h1/engine/developer-console/debug.yml
+++ b/src/content/h1/engine/developer-console/debug.yml
@@ -921,7 +921,8 @@ DebugFunctions:
           ```hsc
           (cheat_bottomless_clip [boolean])
           ```
-          Prevents player weapons from generating heat and depleting battery or ammo rounds.
+          Prevents player weapons from generating heat and depleting ammo rounds.
+          Battery will still be depleted.
     - slug: cheat_bump_possession
       info:
         en: |-
@@ -937,7 +938,7 @@ DebugFunctions:
           ```hsc
           (cheat_controller [boolean])
           ```
-          If enabled, the game load a `cheats.txt` file which binds controller buttons
+          If enabled, the game loads a `cheats.txt` file which binds controller buttons
           to console commands. Known only to work in Halo beta versions.
     - slug: cheat_deathless_player
       info:
@@ -1440,20 +1441,38 @@ DebugFunctions:
       info:
         en: |-
           ```hsc
-          (debug_camera)
+          (debug_camera [boolean])
           ```
+          Shows debug information about the camera in the top left corner, including:
+          - 3D coordinates in world units
+          - BSP leaf and cluster indices
+          - Ground point coordinates and BSP surface index (point directly below the camera on the ground)
+          - Facing direction (yaw angle)
+          - Tag path of the ground point surface's shader
     - slug: debug_collision_skip_objects
       info:
         en: |-
           ```hsc
-          (debug_collision_skip_objects)
+          (debug_collision_skip_objects [boolean])
           ```
+          Disables collision tests against [objects][object]. For example,
+          [projectiles][projectile] will pass through scenery and [bipeds][biped]
+          through non-moving [vehicles][vehicle]. Vehicle-to-vehicle collision
+          still happens, as does moving [vehicle][] against [biped][]. Everything
+          still collides with the [BSP][scenario_structure_bsp].
     - slug: debug_collision_skip_vectors
       info:
         en: |-
           ```hsc
-          (debug_collision_skip_vectors)
+          (debug_collision_skip_vectors [boolean])
           ```
+          Globally disables vector/ray collision tests, with the following observed effects:
+          - [Projectiles][projectile], [particles][particle] and moving [items][item] will pass through everything, even the BSP.
+          - Melees will have no effect.
+          - [Vehicle] suspension, such as the Warthog's wheels, will hang.
+          - [Object lighting][renderer#lighting] will be unable to determine if an object
+            exists in direct sunlight from the [sky][], resulting in incorrect lighting
+            and shadow direction when an object moves.
     - slug: debug_damage
       info:
         en: |-
@@ -2612,7 +2631,7 @@ DebugFunctions:
           (rasterizer_first_person_weapon_near_clip_distance [real])
           ```
           Sets the [near clip distance](https://en.wikipedia.org/wiki/Clipping_(computer_graphics))
-          of the first person arms and weapon. Defaults to `0.0.011719`.
+          of the first person arms and weapon. Defaults to `0.011719`.
     - slug: rasterizer_floating_point_zbuffer
       info:
         en: |-
